--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,7 +5,7 @@ name: POLmonitor
 
 on:
   schedule:
-    - cron: '30 19 * * *' # runs at 17:00 UTC everyday
+    - cron: '* 20 * * *' # runs at 17:00 UTC everyday
 
 jobs:
   build:
