--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,7 +5,7 @@ name: POLmonitor
 
 on:
   schedule:
-    - cron: '* 20 * * *' # runs at 20:00 UTC everyday
+    - cron: '* 16 * * *' # runs at 20:00 UTC everyday
 
 jobs:
   build:
@@ -26,3 +26,13 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run the scraper
       run: python scraper.py
+    - name: commit files
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add -A
+        git commit -m "update data" -a
+    - name: push changes
+      uses: ad-m/github-push-action@v0.6.0
+      with:
+        branch: main
